rest of cleaning backend project
mostly suppressing warnings, some depreciated code replaced